add dependency and log folder

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,10 +4,6 @@ feign.client.config.gobClient.readTimeout=100000
 feign.client.config.gobClient.logger-level=full
 feign.autoconfiguration.jackson.enabled=true
 
-#feign.compression.request.enabled=true
-#feign.compression.request.mime-types=text/xml,application/xml,application/json
-#feign.compression.request.min-request-size=2048
-
 #API DIRECTION
 url.gob.api=https://datos.gob.cl/api/3/action/
 
@@ -19,6 +15,15 @@ api.password=duocuc23
 ## CONTEX
 server.port=3000
 
+#logging config
+
+logging.level.netgloo= off
+logging.pattern.file= %d{dd-MM-yyyy HH:mm:ss}|%-5level|[%thread] %logger{15} - %msg%n
+logging.pattern.console= %d{dd-MM-yyyy HH:mm:ss}|%-5level|[%thread] %logger{15} - %msg%n
+logging.file.name=../logs/gtfs.log
+logging.logback.rollingpolicy.max-file-size=200MB
+logging.logback.rollingpolicy.max-history=10
+logging.level.cl.itam.fintoc.s=debug
 
 ## cron test 1 minute
 cron.launchtime=${CRON_SET:0 0/1 * * * ?}
